@@ -25,6 +25,7 @@
 	* src/main/Makefile.am: new file
 	* src/main/perl/Makefile.am: new file
 	* src/main/perl/lib/Makefile.am: new file
+	* src/main/resources/Makefile.am: new file
 
 	* src/main/perl/cgi-bin/bedrock.cgi: Added file (based on CVS
 	  revision 1.3 of the file that formerly existed as
